src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-122.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incs\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units incs"
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: incs
              option: SecondaryDistanceCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing =
    severity: Error
