src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-124.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incs=2\")"
---
items:
  - loc: "#units incs=2"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Meters
          value: 2
        loc: incs=2
        locs:
          correction: "2"
          option: incs
        option: SecondaryDistanceCorrection
    type: UnitsDirective
