src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-127.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units incs=-2.3\")"
---
items:
  - loc: "#units incs=-2.3"
    locs:
      directive: "#units"
    options:
      - correction:
          unit: Meters
          value: -2.3
        loc: incs=-2.3
        locs:
          correction: "-2.3"
          option: incs
        option: SecondaryDistanceCorrection
    type: UnitsDirective
