src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-131.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units s=f incs=2m\")"
---
items:
  - loc: "#units s=f incs=2m"
    locs:
      directive: "#units"
    options:
      - loc: s=f
        locs:
          option: s
          unit: f
        option: SecondaryDistanceUnit
        unit: Feet
      - correction:
          unit: Meters
          value: 2
        loc: incs=2m
        locs:
          correction: 2m
          option: incs
        option: SecondaryDistanceCorrection
    type: UnitsDirective
